--- a/home.css
+++ b/home.css
@@ -7,7 +7,7 @@ body {
 /* header */
 header{
     display:flex;
-    border-bottom:2px solid goldenrod;  
+    border-bottom:2px solid orange;  
     background-color: white;
     justify-content: space-between;
     font-size: 16pt;
